# django_cowsay

./: db.sqlite3  manage.py  pyproject.toml
cowsay/: admin.py  apps.py  forms.py  models.py  views.py
cowsay/migrations/: 0001_initial.py  0002_auto_20200817_1723.py
cowsay/static/css/: style.css
django_cowsay/: asgi.py  settings.py  urls.py  wsgi.py
templates/: index.html  index.py  most_recent.html
